# ansible-kvm

./: flake.nix  pyproject.toml  pyproject.toml.old  requirements.yml
defaults/: main.yml
filter_plugins/: list_cloudinit_files.py
meta/: main.yml  requirements.yaml
molecule/default/: molecule.yml  prepare.yaml
molecule/default/host_vars/: instance
tasks/: config_cloudinit.yml  config_vms.yml  main.yml
templates/: vm-template.xml.j2
