[tool.poetry]
name = "ansible-kvm"
version = "0.1.0"
description = "role to configure kvm"
authors = ["Pierre 'rootmout' Kelbert <root@mout.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
molecule = "^5.0.1"
molecule-vagrant = "^2.0.0"
python-vagrant = "^1.0.0"
paramiko = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
